src/sass/flx/_who-we-are.scss
/* who we are
----------------------------------------------------------------------------- */
.who-we-are {
    background: var(--off-white);

    /* team-members
    ------------------------------------------------------------------------- */
    .team-members {
        margin-bottom: 6.75rem;
        columns: 1;
        column-gap: 48px;

        @media (min-width: 660px) {
            columns: 2;
        }

        @media (min-width: 960px) {
            columns: 3;
        }
    }

    .team-member {
        margin-bottom: 3rem;

        .image {
            width: 100%;
            margin-bottom: 0.625rem; //10px
        }

        .name {
            font-family: var(--copy);
            font-size: var(--font-root);
        }

        .role {
            font-size: var(--font-root-plus);
            text-transform: uppercase;
            color: var(--meta);
        }
    }

    @media (min-width: 960px) {
        .team-member:nth-of-type(4) {
            padding-bottom: 20rem;
        }

        .team-member:nth-of-type(5) {
            padding-top: 20rem;
        }
    }

    /* text-image shared styles
    ------------------------------------------------------------------------- */
    .text-image,
    .text-image-full-width {
        // add styles
        padding-top: 2.25rem;
        margin-bottom: 6rem;
    }

    /* text-image-standard
    ------------------------------------------------------------------------- */
    .text-image {
        width: 100%;
        max-width: var(--site-width);

        padding-left: 1.5rem;
        padding-right: 1.5rem;
        margin: 0 auto 7rem;

        display: grid;
        grid-template-columns: 1fr;

        @media (min-width: 880px) {
            padding-left: 4.5rem;
            padding-right: 4.5rem;
            grid-template-columns: repeat(12, 1fr);
            column-gap: var(--gutter-large);
        }

        .contain-inner {
            padding-top: 2.25rem;
            border-top: 1.5px solid var(--mid-black);

            @media (min-width: 880px) {
                display: grid;
                grid-column: 3 / 11;
                grid-template-columns: repeat(8, 1fr);
                grid-gap: var(--gutter-width);
            }
        }

        &:last-of-type {
            .contain-inner {
                border: none;
            }
        }

        .text-left {
            .rich-text {
                grid-column: 1 / 5;
                grid-row: 1 / 2;
            }

            .image {
                grid-column: 5 / -1;
                grid-row: 1 / 2;
                justify-self: end;
            }
        }

        .text-right {
            .rich-text {
                grid-column: 5 / -1;
                grid-row: 1 / 2;
            }

            .image {
                grid-column: 1 / 4;
                grid-row: 1 / 2;
                justify-self: end;
            }
        }

        .title {
            margin-bottom: var(--drop-small);
            font-size: var(--font-base-plus);
            text-transform: uppercase;
            line-height: var(--lh-medium);
            color: var(--mid-black);
        }

        p {
            margin-bottom: 0.5rem;
            font-size: var(--font-base-plus);
            color: var(--mid-black);
        }

        p:first-of-type {
            font-family: var(--copy-med);
            color: var(--black);
        }

        p:last-of-type {
            margin-bottom: 2rem;
        }

        .link {
            font-family: var(--copy-med);
            font-size: var(--font-small);
            text-transform: uppercase;
            color: var(--black);
        }
    }

    /* text-image full-width
    ------------------------------------------------------------------------- */
    .text-image-full-width {
        .container {
            display: grid;
            grid-template-columns: 1fr;

            @media (min-width: 960px) {
                grid-template-columns: repeat(12, 1fr);
                grid-column-gap: var(--gutter-large);
            }
        }

        .text-left {
            .rich-text {
                @media (min-width: 960px) {
                    grid-column: 1 / 7;
                }
            }

            .image {
                @media (min-width: 960px) {
                    grid-column: 8 / -1;
                    justify-self: start;
                    transform: translateX(32px);
                }
            }
        }

        .text-right {
            .image {
                @media (min-width: 960px) {
                    grid-column: 1 / 6;
                    grid-row: 1;
                    justify-self: end;
                }
            }

            .rich-text {
                @media (min-width: 960px) {
                    grid-column: 7 / -1;
                    grid-row: 1;
                }
            }
        }

        .section-title {
            margin-bottom: var(--drop-small);
            font-size: var(--font-base-plus);
            text-transform: uppercase;
            line-height: var(--lh-medium);
            color: var(--mid-black);
        }

        p {
            margin-bottom: 0.5rem;
            font-family: var(--titling);
            font-size: 4rem;
            color: var(--black);
        }

        .link {
            font-family: 'cabinet-medium';
            font-size: var(--font-small);
            text-transform: uppercase;
            color: var(--black);
        }
    }

    /* image-offset
    ------------------------------------------------------------------------- */
    .image-offset {
        margin-bottom: var(--drop-large);

        .grid-offset {
            display: grid;
            grid-template-columns: 1fr;
        }

        @media (min-width: 880px) {
            .grid-offset {
                grid-template-columns: repeat(12, 1fr);
                grid-template-rows: repeat(9, 108px);
                column-gap: var(--gutter-large);
            }

            .primary-image {
                grid-column: 3 / -1;
            }

            .secondary-image {
                grid-column: 1 / 7;
                grid-row: 6 / -1;
                //transform: translateY(-20px);
            }
        }
    }

    /* image-grid four cols
    ------------------------------------------------------------------------- */
    .four-cols {
        padding-top: 96px;
        background-color: var(--black);

        .introduction {
            display: flex;
            flex-direction: column;

            color: var(--white);

            @media (min-width: 960px) {
                flex-direction: row;
                justify-content: space-between;
            }
        }

        .title {
            font-size: var(--font-medium);
        }

        p {
            width: 39.5%;
            max-width: 512px;
        }

        .images {
            padding: 3.75rem 0 4.625rem 0;
            display: grid;
            grid-template-columns: 1fr;

            @media (min-width: 520px) {
                grid-template-columns: repeat(12, 1fr);
                column-gap: var(--gutter-large);
            }
        }

        .image {
            margin-bottom: 4rem;
            justify-self: center;

            @media (min-width: 520px) {
                grid-column: span 6;
            }

            @media (min-width: 960px) {
                grid-column: span 4;
            }

            @media (min-width: 1120px) {
                grid-column: span 3;

                &:nth-of-type(4n + 1) {
                    justify-self: start;
                }

                &:nth-of-type(4n) {
                    justify-self: end;
                }
            }
        }
    }

    /* image-grid five cols
    ------------------------------------------------------------------------- */
    .five-cols {
        padding-top: 6.875rem;
        padding-bottom: 4.25rem;
        background-color: var(--white);

        .introduction {
            margin-bottom: 7.25rem;
            display: flex;
            flex-direction: column;

            @media (min-width: 960px) {
                flex-direction: row;
                justify-content: space-between;
            }
        }

        .section-title {
            font-size: var(--font-medium);
        }

        p {
            width: 39.5%;
            max-width: 512px;
        }

        .sub-title {
            margin-bottom: 1.25rem;
            font-size: var(--font-base-plus);
            text-transform: uppercase;
            color: var(--mid-black);
        }

        .images {
            display: grid;
            grid-template-columns: 1fr;
            margin-bottom: 3rem;

            @media (min-width: 880px) {
                grid-template-columns: repeat(12, 1fr);
                grid-gap: 48px;
            }
        }

        .lh-col {
            grid-column: 1 / 7;
        }

        .rh-col {
            grid-column: 8 / -1;
        }

        .lh-col__images,
        .rh-col__images {
            @media (min-width: 880px) {
                display: grid;
                column-gap: var(--gutter-large);
            }
        }

        .lh-col__images {
            @media (min-width: 880px) {
                grid-template-columns: repeat(6, 1fr);

                .image {
                    grid-column: span 2;
                    align-items: center;
                }

                .image:nth-of-type(4n) {
                    justify-self: start;
                }

                .image:nth-of-type(3n),
                .image:nth-of-type(6n) {
                    justify-self: center;
                }
            }
        }

        .rh-col__images {
            @media (min-width: 880px) {
                grid-template-columns: repeat(5, 1fr);

                .image:nth-of-type(1n) {
                    grid-column: 1 / 4;
                }

                .image:nth-of-type(2n) {
                    grid-column: 4 / 6;
                }

                .image:nth-of-type(4n) {
                    justify-self: start;
                }
            }
        }
    }
}

